# animation-editor

./: .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  README.md  nine_slice.cpp
include/: font.hpp  geometry_generator.hpp  nine_slice.hpp  render_queue.hpp  renderer.hpp  shader.hpp  texture.hpp  texture_atlas.hpp  ui.hpp
shader/: fontFrag.glsl  fontVert.glsl  gridFrag.glsl  gridVert.glsl  uiFrag.glsl  uiVert.glsl
src/: font.cpp  geometry_generator.cpp  main.cpp  render_queue.cpp  renderer.cpp  shader.cpp  texture.cpp  texture_atlas.cpp  ui.cpp
